	(twittering-find-curl-program): add
	(twittering-start-http-ssl-session): add
	(twittering-start-http-non-ssl-session): add
	(twittering-http-application-headers): add
	(twittering-http-get): rewritten by using start-http-session
	(twittering-http-post): rewritten by using start-http-session
	(twittering-http-post-default-sentinel): use the same argument
	format of http-get-default-sentinel

2009-12-16  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-tinyurl-replace-at-point):
	distinguish between URL and others based on
	`bounds-of-thing-at-point'.

2009-12-15  haya  <haya@starfish.unicus.ddo.jp>

	* twittering-mode.el (twittering-status-not-blank-p): fix invalid escape sequence

2009-12-12  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el (twittering-retrieve-image-without-wget):
	Kill buffer after retrieving the image

2009-12-11  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-tinyurl-get): Call
	`mm-url-insert' only if argument `longurl' is non-nil to avoid
	error "Wrong type argument", otherwise return nil explicitly.
	(twittering-tinyurl-replace-at-point): Replace a region with
	newurl when `newurl' is non-nil.

2009-12-07  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-http-get-default-sentinel): Check
	if buffer live-p before killing it.

2009-12-07  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-read-username-with-completion):
	rename from `twittering-get-username-with-completion'
	(twittering-make-list-from-assoc): simplified
	(twittering-other-user-timeline-interactive): changed init string
	to nil

2009-12-06  NAKAYA Toshiharu  <toshiharu.nakaya@gmail.com>

	* twittering-mode.el (twittering-retrieve-image-without-wget): set
	require-final-newline is nil locally since emacs can not save icon
	images because of "error in process filter: save-buffer: Text is
	read-only".

2009-12-06  Tadashi MATSUO  <matsuo@i.ci.ritsumei.ac.jp>
